# vertical

./: .gitignore  CLAUDE.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/adapters/: base.py  google_calendar.py  salesforce.py
backend/middleware/: auth.py
backend/mock_data/: crm_update.py  deals.py  files.py  sales.py  schedule.py
backend/models/: schemas.py
backend/routers/: auth.py  crm_update.py  deals.py  events.py  files.py  integrations.py  linked_files.py  recordings.py  sales.py  schedule.py  webhooks.py  workflows.py
backend/scripts/: check_plaud_files.py  generate_meeting_audio.py  test_analysis.py  test_composio_tools.py
backend/services/: auth.py  crm_graph.py  crm_service.py  file_matching.py  merge.py  messages.py  plaud_api.py  plaud_sync.py  supabase.py  sync.py  transcription.py  workflow.py
backend/services/extraction/: __init__.py  account.py  base.py  contact.py  event_summary.py  opportunity.py
backend/skills/: __init__.py
backend/skills/connectors/: __init__.py  salesforce.py
backend/skills/sales_analyst/: __init__.py  agent.py  prompts.py  schemas.py  tools.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20260312000000_create_events.sql  20260312000001_rename_to_events.sql  20260316000000_add_sales_details.sql  20260317000000_add_recordings_and_file_links.sql  20260317000001_add_workflows.sql  20260318000000_add_users.sql  20260319000000_add_file_link_metadata.sql  20260319100000_unify_recordings.sql  20260319200000_recordings_fields.sql  20260319300000_drop_unused_recording_cols.sql  (+9 more)
(+47 files in other folders)
