[project]
name = "plaud-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn>=0.41.0",
    "composio>=0.11.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.0.0",
    "elevenlabs>=1.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "pyjwt>=2.0.0",
    "pydub>=0.25.1",
]

[tool.uv]
dev-dependencies = []
